--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "apollo-cache-persist": "^0.1.1",
     "dayjs": "^1.8.20",
     "graphql": "^15.0.0",
     "i18next": "^19.3.2",
